# fast_cmaes

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
examples/: api_server.py  basic.py  python_benchmarks.py  python_quickstart.py  rich_tui_demo.py
python/: naive_cma.py
scripts/: setup_and_demo.sh
src/: ffi.rs  lib.rs
tests/: benchmarks.rs  hard_benchmarks.rs  python_smoke.py  python_smoke_pypi.py  stability.rs  test_api_smoke.py  test_roundtrip.py  very_hard_lite.rs
tests/ffi_smoke/: demo.c
