[package]
name = "fastcma"
version = "0.1.2"
edition = "2021"

[lib]
name = "fastcma"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
nalgebra = "0.31"
nalgebra-lapack = { version = "0.22", optional = true }
numpy = { version = "0.22", optional = true }

[features]
default = ["eigen_rust"]
eigen_rust = []
eigen_lapack = ["nalgebra-lapack"]
numpy_support = ["numpy"]
test_utils = []

[dev-dependencies]
fastcma = { path = ".", features = ["test_utils"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
